# pdm_pandas

./: pyproject.toml
src/my_history/: .cli.py.swp  cli.py
